crates/sdk-tests/tests/endpoint/endpoint_and_fundable_attrs_wrong_order.rs
use svm_sdk::template;

#[template]
mod Template {
    #[endpoint]
    #[fundable(deny)]
    fn init() {}
}

fn main() {}
